# simple_csv

./: .gitignore  Cargo.toml  README.md  default_keybindings.yml  export.toml  justfile  keymap.json5  keymap.ron  keymap.toml  keymap.yml  out.csv  sample.csv  sample.json  sample.ron  sample.toml  sample.yml
src/: app.rs  error.rs  event.rs  handler.rs  main.rs  tmp.rs  tui.rs  ui.rs
src/app/: core.rs  layout.rs  mod.rs  tmp.rs
src/app/component_table/: actions.rs  actions_cell_select.rs  commands.rs  dtype_select.rs  extensions.rs  mod.rs  popups.rs  render.rs  skim.rs
src/app/component_table/data_table/: popups.rs  skim.rs
src/app/evt_handlers/: action.rs  io.rs  key.rs  mod.rs
src/app/table_data/: cell_select.rs  data_table.rs  extensions.rs  mod.rs  popup_edit_cell.rs  rows_ext.rs
src/app/table_data/data_table/: cell_select.rs  popups.rs  skim.rs
src/app/widget_keybindings/: mod.rs
src/backend/: error.rs  event_handler.rs  mod.rs
src/backend/csv/: mod.rs
src/backend/file_formats/: file_csv.rs  file_json.rs  file_multi.rs  file_ron.rs  file_toml.rs  file_yml.rs  mod.rs
src/backend/key_bindings/: default.yml  defaults.rs  map.rs  mod.rs
src/backend/tasks/: crossterm.rs  events.rs  io_task.rs  mod.rs
src/backend/utils/: mod.rs
src/dataframe/: data_frame.rs  mod.rs
src/dataframe/data_frame/: access.rs  csv.rs  data_row.rs  data_type.rs  error.rs  export.rs  header.rs
src/event/: actions.rs  crossterm.rs  csv.rs  error.rs  event_handler.rs  io_task.rs  key_bindings.rs  mod.rs
src/event/key_bindings/: action.rs  map.rs  utils.rs
src/event/tasks/: crossterm.rs  io_task.rs  mod.rs
src/main_screen/: helpers.rs  mod.rs  object.rs  transaction.rs
src/main_screen/table_data/: cell_select.rs  data_cell.rs  data_row.rs  data_table.rs  io.rs  mod.rs  sample.csv  table_ext.rs
src/old_unused/: data_cell.rs  data_row.rs  data_table.rs  defaults.rs
src/old_unused/main_screen/: mod.rs
src/table_data/: cell_select.rs  data_table.rs  rows_ext.rs
src/tmp/: config.rs  keytest.rs  mod.rs
src/utils/: cli.rs  logging.rs  mod.rs
(+7 files in other folders)
