
[package]
name = "tui_data_entry"
version = "0.1.0"
authors = ["felix <florianfelixmeyer@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.43.0", features = ["full"] }

tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
derive_more = { version = "1.0.0", features = ["from", "display"] }
ulid = { version = "1.1.4", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
stacked_errors = "0.7.0"
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.14.0"
ratatui_data_row = { path = "../ratatui_data_row" }
