[package]
name = "simple_csv"
version = "0.2.0"
authors = ["felix <florianfelixmeyer@gmail.com>"]
license = "MIT"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "scsv"

[dependencies]
# dataframe = { path = "dataframe" }
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.43.0", features = ["full"] }

tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
toml = { version = "0.8.20", features = ["preserve_order"] }
ron = { version = "0.8.1", features = ["indexmap"] }
json5 = "0.4.1"
serde_yml = "0.0.12"

indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.14.0"
csv = "1.3.1"
derive_setters = "0.1.6"
clap = { version = "4.5.30", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
notify-debouncer-full = { version = "0.5.0", features = ["serde"] }
directories = "6.0.0"
text-buffer = "0.1.0"
crokey = "1.1.0"
fuzzy-muff = "0.4.7"
